@@ -1,3 +1,6 @@
+2014-02-24 arnaud.fontaine
+* Use Pylint to check source code to unify ZODB Components and Python Script source code checking.
+
 2013-09-03 arnaud.fontaine
 * ZODB Components: Workflow History must always be kept, so avoid an extra step for developers.
 
