@@ -1,3 +1,6 @@
+2014-02-24 arnaud.fontaine
+* Follow API changes to unify ZODB Components and Python Script source code checking.
+
 2014-02-19 Arnaud Fontaine
 * ZODB Components: Remove ClassTool and DocumentationHelper relying on it.
 
