@@ -1,3 +1,6 @@
+2014-02-24 arnaud.fontaine
+* Add annotations support to check source code without saving.
+
 2013-08-22 jerome
 * Update to 45d3068aa7190f08396bcfe134e505fe144c1ccb ( package 10.28.2013 )
 
